--- a/gb/19/5/6/n11237308.md
+++ b/gb/19/5/6/n11237308.md
@@ -1,62 +1,64 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mprjd2205/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/n24hr.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/news392.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/news2007.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/news2008.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/ncyule.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/nsc1002.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/9p.md#1">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/mprjd2205/www/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/mprjd2205/ntdtv/blob/master/gb/prog1530_1.md#1">ºÍÆ½¿¹Òé</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center></h2>
-<img src="http://i.epochtimes.com/assets/uploads/2019/05/1905052330171886-600x400.jpg" />
-<h6>2019Äê5ÔÂ5ÈÕÏÂÎç£¬ÔÚÃÀ¹úÌ´ÏãÉ½²¼ÀûË¹÷ì¶ûÒôÀÖÌü£¨Honolulu Blaisdell Concert Hall£©£¬¾üÐè½»»»´¦¾­ÀíThomas Heidenmann¹Û¿´ÁËÉñÔÏÊÀ½çÒÕÊõÍÅµÄ¾«²ÊÑÝ³ö¡££¨ÁÖÄÏÓî£¯´ó¼ÍÔª£©
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒé¦–é¡µ" alt="å¤§çºªå…ƒé¦–é¡µ"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»" alt="å›½é™…æ–°é—»"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»" alt="å¤§é™†æ–°é—»"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/5.jpg" title="å¤§çºªå…ƒè¯„è®º" alt="å¤§çºªå…ƒè¯„è®º"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/6.jpg" title="ä¼ ç»Ÿæ–‡åŒ–" alt="ä¼ ç»Ÿæ–‡åŒ–"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/7.jpg" title="ç”Ÿæ´»æ¶ˆè´¹" alt="ç”Ÿæ´»æ¶ˆè´¹"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/8.jpg" title="å¨±ä¹ä¼‘é—²" alt="å¨±ä¹ä¼‘é—²"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/9.jpg" title="å¥åº·" alt="å¥åº·"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/10a.jpg" title="ç‹¬å®¶" alt="ç‹¬å®¶"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/12a.jpg" title="å¤´æ¡è¦é—»" alt="å¤´æ¡è¦é—»"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yxhgbq3433/www/blob/master/README.md?zsrh#1">ç¿»å¢™</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a></p><p><a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/yxhgbq3433/www/blob/master/README.md?zsrh#1">å¹³å°é¦–é¡µ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>ç¥žéŸµå¤å…´ä¸­åŽä¼ ç»Ÿæ–‡åŒ– å†›éœ€å¤„ç»ç†å¿ƒç”Ÿæ•¬ç•</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/05/1905052330171886-600x400.jpg" />
+<h6>2019å¹´5æœˆ5æ—¥ä¸‹åˆï¼Œåœ¨ç¾Žå›½æª€é¦™å±±å¸ƒåˆ©æ–¯é»›å°”éŸ³ä¹åŽ…ï¼ˆHonolulu Blaisdell Concert Hallï¼‰ï¼Œå†›éœ€äº¤æ¢å¤„ç»ç†Thomas Heidenmannè§‚çœ‹äº†ç¥žéŸµä¸–ç•Œè‰ºæœ¯å›¢çš„ç²¾å½©æ¼”å‡ºã€‚ï¼ˆæž—å—å®‡ï¼å¤§çºªå…ƒï¼‰
 </h6>
 <hr>
-	<p>¡¾´ó¼ÍÔª2019Äê05ÔÂ06ÈÕÑ¶¡¿£¨´ó¼ÍÔª¼ÇÕßÁÖÄÏÓîÃÀ¹úÌ´ÏãÉ½±¨µ¼£©¡°<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">ÉñÔÏ</a><a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md">Îèµ¸</a>ÃÀµÃÓÃÈÎºÎÓïÒô¶¼ÎÞ·¨ÃèÊö£¬ÒôÀÖÓÅÃÀ¶¯Ìý£¬ÁîÈËÐÄÉú¾´Î·¡£¡±¾üÐè´¦¾­ÀíThomas HeidenmannÔÞÅåÉñÔÏÒÕÊõ¼ÒÒÔÎèµ¸¡¢ÒôÀÖµÄÒÕÊõ·½Ê½£¬Îª¸´ÐË´«Í³ÎÄ»¯Ëù×öµÄ¹±Ï×¡£</p>
-<p>5ÔÂ5ÈÕÏÂÎç£¬ÔÚÃÀ¹ú<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E6%AA%80%E9%A6%99%E5%B1%B1%E5%B8%83%E5%88%A9%E6%96%AF%E9%BB%9B%E5%B0%94%E9%9F%B3%E4%B9%90%E5%8E%85.md">Ì´ÏãÉ½²¼ÀûË¹÷ì¶ûÒôÀÖÌü</a>£¨Honolulu Blaisdell Concert Hall£©£¬<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">ÉñÔÏ</a>ÊÀ½çÒÕÊõÍÅ2019ÄêÔÚµ±µØµÄ×îºóÒ»³¡ÑÝ³öÈÃÏÖ³¡¹ÛÖÚÎªÖ®Õñ·Ü¡£HeidenmannÈÏÎª£¬ÉñÔÏ½«¡°¹ÅÀÏµÄÎÄÃ÷ÀúÊ·ÔÙÏÖ£¬½«¼¸½üÊ§ÂäµÄÈËÀà¹å±¦ÕÒ»Ø£¬ÆôµÏÈËÐÄ£¬ÁîÈËÕðº³¡±¡£</p>
-<p>¡°¾ø¶ÔµÄ¼¤ÀøÈËÐÄ¡£¡±ËûËµ¡£¡°ÎÒ¿´µ½Ëý¸³ÓèÁË<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E7%A5%9E%E6%80%A7.md">ÉñÐÔ</a>µÄÒ»Ãæ£¬µ±È»£¬ÔÙ¿´¿´ÖÐ¹úÎÄ»¯´ÓÔ¶¹ÅµÄ»Ø¹é£¬Ì«ÁîÈËÕðº³ÁË£¬¸øÎÒÁôÏÂÖÁÉîµÄÓ¡Ïó¡£¡±</p>
-<p>Heidenmann±íÊ¾£¬ÉñÔÏ<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md">Îèµ¸</a>¼Ò¸»ÓÐ»îÁ¦£¬´«µÝµÄÎÄ»¯ÀíÄîÁîÈË¾´Ñö£¬¡°ÎÒÏëËµµÄÊÇ£¬ËûÃÇ°ÑËý£¨ÖÐ¹ú´«Í³ÎÄ»¯£©´ø»ØÀ´ÁË£¬ÓÃËûÃÇµÄÒôÀÖ¡¢ÓÃËûÃÇµÄÎèµ¸±£´æÁË´«Í³ÎÄ»¯£¬ÔÙÅ¬Á¦µØ´«²¥¸øÈËÃÇ£¬ÒýÆð£¨ÊÀÈËµÄ£©¹Ø×¢¡£¡±</p>
-<p>Ëû¸ÐÎòµÀ£º¡°ÕâÒ²ÊÇÎÒÃÇ±ØÐëÒ»Ö±¼á³Ö²»Ð¸µÄ£¬ÒòÎªÕâÊÇÎÒÃÇµÄ´«Í³¡£¡±</p>
-<p>Ëæºó£¬Heidenmann³äÂú¾´ÒâµØËµ£º¡°ÑÝ³ö¾«Õ¿ÎÞ±È¡£ÄêÇáµÄÎèµ¸¼ÒÊÇÄÇÃ´µØÁîÈË¾ªÌ¾£¡¿´µ½ËûÃÇËù×ö³öµÄÒ»ÇÐ²ÅÄÜ£¬ÈÃÈËÌ¾Îª¹ÛÖ¹¡£¡±</p>
-<p>Ëû±íÊ¾£¬¡°ÎÒ·Ç³£Ï²»¶ÉñÔÏ¡£¿´µ½ËûÃÇÌøÎèµÄÑù×Ó£¬ÃÀµÃ¼òÖ±ÊÇÎÞÒÔÑÔ±í¡£¡±</p>
-<p>¶ÔÓÚÉñÔÏÖÐÎ÷·½ÀÖÆ÷ºÏèµÑÝ×àµÄÒôÀÖ£¬Heidenmann·ÖÏíËûµÄ¸ÐÊÜÊ±·Ç³£¼¤¶¯£¬¡°ÒôÀÖ¶ÔÎÒÀ´Ëµ£¬Ì«°ôÁË£¬ËàÈ»Æð¾´£¬ÕæµÄÌ«²»¿ÉË¼ÒéÁË£¬¾«²ÊµÄÑÝ³ö¡£¡±</p>
-<p>Ëû»¹±íÊ¾£¬ÒôÀÖÓëÎèµ¸¡¢¶¯Ì¬ÌìÄ»µÄÅäºÏÍêÃÀÎÞè¦£¬Ò²ÈÃËû¶ÔÖÐ¹úµÄ´«Í³ÎÄ»¯ÐÄÉúÏòÍù£¬ÈÃËû¶ÔÖÐ¹úÓÐÁË¡°²»Ò»Ñù¡±µÄÓ¡Ïó¡£¡°Ï£ÍûÔÚÎ´À´¼¸ÄêÀï£¬ÎÒ»¹¿ÉÒÔ¿´µ½ÕâÑùµÄÎÄ»¯ºÍÒôÀÖ¡£¡±</p>
-<p>Ëû»¹¾õµÃÉñÔÏÎè¾çÖÐµÄÈËÎïÃè»æµÃÉú¶¯ÓÐÈ¤£¬¡°ÎÒÏ²»¶ËûºÈ×íÊ±µÄÄÇ¸ö½ÇÉ«£¬ÕâÕæÊÇÃî¼«ÁË£¡¡±Ëû±íÊ¾£¬ÌÆÌ«×ÚÓÎÔÂ¹¬µÄ½ÚÄ¿ÈÃËûÇãÐÄ²»ÒÑ¡£</p>
-<p>×îºó£¬HeidenmannËµ£º¡°¿´ÍêÕâ¸öÑÝ³öºó£¬ÖÐ¹úµÄÐÎÏó£¨ÔÚÎÒÐÄÖÐ£©ÒÑ¾­·¢ÉúÁË±ä»¯¡£¡±ËûÈÏÎª£¬ÉñÔÏÒÕÊõ¼Ò¸¶³öµÄÅ¬Á¦ÕñÐËÁË´«Í³ÎÄ»¯£¬ÁîÈË¾´Åå¡£</p>
-<p>ÔðÈÎ±à¼­£ºÁÖÝè</p>
+	<p>ã€å¤§çºªå…ƒ2019å¹´05æœˆ06æ—¥è®¯ã€‘ï¼ˆå¤§çºªå…ƒè®°è€…æž—å—å®‡ç¾Žå›½æª€é¦™å±±æŠ¥å¯¼ï¼‰â€œ<ahref="https://github.com/yxhgbq3433/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">ç¥žéŸµ</a><ahref="https://github.com/yxhgbq3433/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">èˆžè¹ˆ</a>ç¾Žå¾—ç”¨ä»»ä½•è¯­éŸ³éƒ½æ— æ³•æè¿°ï¼ŒéŸ³ä¹ä¼˜ç¾ŽåŠ¨å¬ï¼Œä»¤äººå¿ƒç”Ÿæ•¬ç•ã€‚â€å†›éœ€å¤„ç»ç†Thomas Heidenmannèµžä½©ç¥žéŸµè‰ºæœ¯å®¶ä»¥èˆžè¹ˆã€éŸ³ä¹çš„è‰ºæœ¯æ–¹å¼ï¼Œä¸ºå¤å…´ä¼ ç»Ÿæ–‡åŒ–æ‰€åšçš„è´¡çŒ®ã€‚</p>
+<p>5æœˆ5æ—¥ä¸‹åˆï¼Œåœ¨ç¾Žå›½<ahref="https://github.com/yxhgbq3433/djy/blob/master/gb/tag/%E6%AA%80%E9%A6%99%E5%B1%B1%E5%B8%83%E5%88%A9%E6%96%AF%E9%BB%9B%E5%B0%94%E9%9F%B3%E4%B9%90%E5%8E%85.md#1">æª€é¦™å±±å¸ƒåˆ©æ–¯é»›å°”éŸ³ä¹åŽ…</a>ï¼ˆHonolulu Blaisdell Concert Hallï¼‰ï¼Œ<ahref="https://github.com/yxhgbq3433/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">ç¥žéŸµ</a>ä¸–ç•Œè‰ºæœ¯å›¢2019å¹´åœ¨å½“åœ°çš„æœ€åŽä¸€åœºæ¼”å‡ºè®©çŽ°åœºè§‚ä¼—ä¸ºä¹‹æŒ¯å¥‹ã€‚Heidenmannè®¤ä¸ºï¼Œç¥žéŸµå°†â€œå¤è€çš„æ–‡æ˜ŽåŽ†å²å†çŽ°ï¼Œå°†å‡ è¿‘å¤±è½çš„äººç±»ç‘°å®æ‰¾å›žï¼Œå¯è¿ªäººå¿ƒï¼Œä»¤äººéœ‡æ’¼â€ã€‚</p>
+<p>â€œç»å¯¹çš„æ¿€åŠ±äººå¿ƒã€‚â€ä»–è¯´ã€‚â€œæˆ‘çœ‹åˆ°å¥¹èµ‹äºˆäº†<ahref="https://github.com/yxhgbq3433/djy/blob/master/gb/tag/%E7%A5%9E%E6%80%A7.md#1">ç¥žæ€§</a>çš„ä¸€é¢ï¼Œå½“ç„¶ï¼Œå†çœ‹çœ‹ä¸­å›½æ–‡åŒ–ä»Žè¿œå¤çš„å›žå½’ï¼Œå¤ªä»¤äººéœ‡æ’¼äº†ï¼Œç»™æˆ‘ç•™ä¸‹è‡³æ·±çš„å°è±¡ã€‚â€</p>
+<p>Heidenmannè¡¨ç¤ºï¼Œç¥žéŸµ<ahref="https://github.com/yxhgbq3433/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">èˆžè¹ˆ</a>å®¶å¯Œæœ‰æ´»åŠ›ï¼Œä¼ é€’çš„æ–‡åŒ–ç†å¿µä»¤äººæ•¬ä»°ï¼Œâ€œæˆ‘æƒ³è¯´çš„æ˜¯ï¼Œä»–ä»¬æŠŠå¥¹ï¼ˆä¸­å›½ä¼ ç»Ÿæ–‡åŒ–ï¼‰å¸¦å›žæ¥äº†ï¼Œç”¨ä»–ä»¬çš„éŸ³ä¹ã€ç”¨ä»–ä»¬çš„èˆžè¹ˆä¿å­˜äº†ä¼ ç»Ÿæ–‡åŒ–ï¼Œå†åŠªåŠ›åœ°ä¼ æ’­ç»™äººä»¬ï¼Œå¼•èµ·ï¼ˆä¸–äººçš„ï¼‰å…³æ³¨ã€‚â€</p>
+<p>ä»–æ„Ÿæ‚Ÿé“ï¼šâ€œè¿™ä¹Ÿæ˜¯æˆ‘ä»¬å¿…é¡»ä¸€ç›´åšæŒä¸æ‡ˆçš„ï¼Œå› ä¸ºè¿™æ˜¯æˆ‘ä»¬çš„ä¼ ç»Ÿã€‚â€</p>
+<p>éšåŽï¼ŒHeidenmannå……æ»¡æ•¬æ„åœ°è¯´ï¼šâ€œæ¼”å‡ºç²¾æ¹›æ— æ¯”ã€‚å¹´è½»çš„èˆžè¹ˆå®¶æ˜¯é‚£ä¹ˆåœ°ä»¤äººæƒŠå¹ï¼çœ‹åˆ°ä»–ä»¬æ‰€åšå‡ºçš„ä¸€åˆ‡æ‰èƒ½ï¼Œè®©äººå¹ä¸ºè§‚æ­¢ã€‚â€</p>
+<p>ä»–è¡¨ç¤ºï¼Œâ€œæˆ‘éžå¸¸å–œæ¬¢ç¥žéŸµã€‚çœ‹åˆ°ä»–ä»¬è·³èˆžçš„æ ·å­ï¼Œç¾Žå¾—ç®€ç›´æ˜¯æ— ä»¥è¨€è¡¨ã€‚â€</p>
+<p>å¯¹äºŽç¥žéŸµä¸­è¥¿æ–¹ä¹å™¨åˆç’§æ¼”å¥çš„éŸ³ä¹ï¼ŒHeidenmannåˆ†äº«ä»–çš„æ„Ÿå—æ—¶éžå¸¸æ¿€åŠ¨ï¼Œâ€œéŸ³ä¹å¯¹æˆ‘æ¥è¯´ï¼Œå¤ªæ£’äº†ï¼Œè‚ƒç„¶èµ·æ•¬ï¼ŒçœŸçš„å¤ªä¸å¯æ€è®®äº†ï¼Œç²¾å½©çš„æ¼”å‡ºã€‚â€</p>
+<p>ä»–è¿˜è¡¨ç¤ºï¼ŒéŸ³ä¹ä¸Žèˆžè¹ˆã€åŠ¨æ€å¤©å¹•çš„é…åˆå®Œç¾Žæ— ç‘•ï¼Œä¹Ÿè®©ä»–å¯¹ä¸­å›½çš„ä¼ ç»Ÿæ–‡åŒ–å¿ƒç”Ÿå‘å¾€ï¼Œè®©ä»–å¯¹ä¸­å›½æœ‰äº†â€œä¸ä¸€æ ·â€çš„å°è±¡ã€‚â€œå¸Œæœ›åœ¨æœªæ¥å‡ å¹´é‡Œï¼Œæˆ‘è¿˜å¯ä»¥çœ‹åˆ°è¿™æ ·çš„æ–‡åŒ–å’ŒéŸ³ä¹ã€‚â€</p>
+<p>ä»–è¿˜è§‰å¾—ç¥žéŸµèˆžå‰§ä¸­çš„äººç‰©æç»˜å¾—ç”ŸåŠ¨æœ‰è¶£ï¼Œâ€œæˆ‘å–œæ¬¢ä»–å–é†‰æ—¶çš„é‚£ä¸ªè§’è‰²ï¼Œè¿™çœŸæ˜¯å¦™æžäº†ï¼â€ä»–è¡¨ç¤ºï¼Œå”å¤ªå®—æ¸¸æœˆå®«çš„èŠ‚ç›®è®©ä»–å€¾å¿ƒä¸å·²ã€‚</p>
+<p>æœ€åŽï¼ŒHeidenmannè¯´ï¼šâ€œçœ‹å®Œè¿™ä¸ªæ¼”å‡ºåŽï¼Œä¸­å›½çš„å½¢è±¡ï¼ˆåœ¨æˆ‘å¿ƒä¸­ï¼‰å·²ç»å‘ç”Ÿäº†å˜åŒ–ã€‚â€ä»–è®¤ä¸ºï¼Œç¥žéŸµè‰ºæœ¯å®¶ä»˜å‡ºçš„åŠªåŠ›æŒ¯å…´äº†ä¼ ç»Ÿæ–‡åŒ–ï¼Œä»¤äººæ•¬ä½©ã€‚</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šæž—è“</p>
 	
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/5/6/n11237308.htm"></a>
 
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/8/19/n11462379.htm">²ÌÇÙ·­³ª¡¶¸æ°×ÆøÇò¡· ÖÜ¶­£º°¥ßÏ²Ì½ã²»´íÅ¶</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/18/n11391565.htm">À¥ÁèÊ±ÉÐ°®ÔË¶¯ ³ÉÖªÃûÆ·ÅÆ×îÐÂÈ«Çò´úÑÔÈË</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/20/n11336607.htm">ÖÜ¶­·ò¸¾´òÀºÇòÐã¶÷°® À¥ÁèÔËÇòÅÜÎ»ÈýÍ¶ÈýÖÐ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/15/n11260150.htm">À¥Áè¿²³ÇÓ°Õ¹ÁÁÏà ÖÜ½ÜÂ×°ç·ÛË¿Î§¹Û</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/2/n11229766.htm">ÎªÅÄÏ·³£´ø¶ùÅ®µ¹Ê±²î À¥Áè£ºÎÒÊÇ¸ö×ÔË½µÄÂè</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/2/11/n11038441.htm">ÏÖÉíÖÜ½ÜÂ×ÑÝ³ª»á ÕÂ×ÓâùÉ¹ÓëÀ¥ÁèÇ×ÃÜºÏÓ°</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/1/16/n10980015.htm">ÖÜ½ÜÂ×É¹ÂèÂèÊ±ÉÐÕÕ À¥ÁèÒ»¾ä»°¼ûÖ¤ÆÅÏ±¸ÐÇé</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/1/7/n10958529.htm">À¥ÁèµÇÊ±ÉÐÔÓÖ¾·âÃæ ¸öÐÔ°®¶ñ×÷¾ç</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/7/27/n10596149.htm">Â¼½ÚÄ¿ÏòÖÜ¶­Ñû¸è£¿ÀîÒ×·å£ºÅÂ±»¾Ü¾øºÜÞÏÞÎ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/3/13/n10215306.htm">À¥Áè·ÖÏíÖÜ¶­ÌùÐÄÐ¡¾Ù¶¯ ÆØ²»ÈÃ¶ùÅ®Â¶Á³Ô­Òò</a></li>
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11638837.htm">ÀëÆæËÀÍöµÄÖØÇìÊé¼ÇÈÎÑ§·æ ±»Ö¸Éæ¶àÆðÔ©°¸</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11640298.htm">ÖÐÐ¡ÒøÐÐ¼·¶Ò³±ÆµÏÖ ÖÐ¹²½ðÈÚÎ¯¼±ÉÌ¶Ô²ß</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11639897.htm">¡¾ÐÂÎÅ¿´µã¡¿ÃÀÖØÉêÍ£»ðµ×Ïß ±±¾©´ó¶¯×÷Ê¾ºÃ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11639300.htm">¼ÌÍõË¼´Ïºó ÅËÊ¯ÒÙ¶ù×ÓÅËÈðÇå¿ÕÎ¢²©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/11/n11582046.htm">ÌÆ´úÊ¹ÕßÆ¯Á÷µ½¾ÞÈË¹ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/31/n11625562.htm">¡¾²Å×Ó¼ÑÈË¡¿½èººÈËÉí·Ý¼ÞÇ¬Â¡ÔøËïµÄÂúÇå²ÅÅ®</a></li>
-> <li><a href="http://www.epochtimes.com/gb/15/4/21/n4416242.htm">Ôã¿·Ö®ÆÞ²»ÏÂÌÃ ¹ÅÈËÊÓ»éÒöÎªÈËÂ×Ö®±¾</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/25/n11612042.htm">¡¾²Å×Ó¼ÑÈË¡¿Áº×£µÄ¹ÊÊÂ ÎÒÃÇ¶Á¶®ÁËÂð£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11638183.htm">¶ÅãëÔóÉàÕ½³Â°ÙÏéºóºôÓõ£º¼¯ÖÐ¾«Éñ×ö¶ÔµÄÊÂ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11635898.htm">ÕÂ×ÓâùÊÔ¾µÈÕ±¾ÒÕ¼¿ ÔøÒò½öËµËÄ¸ö×Ö²ÒÔâÌÔÌ­</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11639534.htm">ÁÖÖ¾Áá17ÈÕ»éÑç ÁÖÒÀ³¿ÊÕÏ²ÌûÒÅº¶ÎÞ·¨¸°Ñç</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11635562.htm">É¹Í··¢ÕÚÑÛ¼Ó¿ÚÕÖÉú»îÕÕ ÈÝ×æ¶ùÒÉÔâ´óÂ½·âÉ±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11635746.htm">ÑöÍû45¶È³ª×ËÔµºÎÁ·³É ·ÑÓñÇå½Ò¸èÊÖÉúÑÄÃØÐÁ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/4/16/n10309074.htm">¡¾Ãû¾ä¹ÊÊÂ¡¿´óÊ÷½«¾ü</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11640231.htm">¡¾ÐÂÎÅ¿´µã¡¿ËÄÖÐÇ¿»¯µ³¹ú Ðé»¯ÈËÃñ ¸Ä¸ïÒÑËÀ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11639377.htm">ÈÏÇåÖÐ¹²²Ð±© ¸ÛÈË¶Ô·¨ÂÖ¹¦µÄÈÏÊ¶Óú¼ÓÕýÃæ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11636669.htm">Íõ½¡ÁÖ¶À×ÓÍõË¼´ÏÁÐÈë±»Ö´ÐÐÈËÃûµ¥ µÇÉÏÈÈËÑ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11636278.htm">¡¾·­Ç½±Ø¿´¡¿·ÖÎö£ºËÄÖÐÈ«»á¹«±¨»òÐ¹´óÃØÃÜ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11638219.htm">ÁÖÖ£±»Ï°º«°ÚÉÏÌ¨ Ïã¸Û²½ÈëºÚ°µÊ±ÆÚ</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/19/5/5/n11235464.md#1">ç¥žéŸµä¹å›¢ç¥žå¥‡ç¾Žå¦™ é¼“æ‰‹èµžä¸åŒå‡¡å“</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/19/5/5/n11235488.md#1">æ‘„å½±å¸ˆï¼šç¥žéŸµå¯¹ä¸­åŽæ–‡åŒ–çš„å¹¿ä¼ éžå¸¸é‡è¦</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/19/5/5/n11235514.md#1">ç¥žéŸµéŸ³ä¹è§¦åŠçµé­‚ç»™äººå®é™ åŒ»å¸ˆèµžå¹</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/19/5/5/n11235674.md#1">ä½“éªŒå®Œç¾Ž å…¬å¸è€æ¿ç››èµžç¥žéŸµæ¼”å‡ºæ°´å‡†é«˜è¶…</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/19/5/5/n11235799.md#1">å¤å¨å¤·è¿žä¸¤åœºæ»¡åœº ç¾Žå†›å®˜èµžå¹ç¥žéŸµæŒ‡æ˜Žæ–¹å‘</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/19/5/5/n11235857.md#1">å‰å·žå‚è®®å‘˜å€™é€‰äººï¼šç¥žéŸµå±•çŽ°æ™®ä¸–ä»·å€¼è§‚</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/mprjd2205/djy/blob/master/gb/19/5/6/n11237308.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/mprjd2205/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/mprjd2205/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/mprjd2205/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">ä¸­å…±çš„ä¼ªç«éª—å±€</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/6/n9810260.md#1" target="_blank">æž—è¾‰ï¼šè¯¸è‘›äº®é—è¿¹è¢«æ¯ è´£ä»»è€…æ±Ÿé’ç§˜ä¹¦é­åŠ«</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/4/26/n2096078.md#1" target="_blank">è½½å…¥å²å†Œçš„ä¸€å¹• ä¸­å—æµ·ä¸‡äººä¸Šè®¿</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/1/26/n12711986.md#1">é¢„è¨€è¯•æžï¼šå…±äº§å…šäº¡äºŽä½•æ—¶ï¼Ÿ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/1/30/n12723183.md#1">ã€è§£å¯†æ—¶åˆ†ã€‘æ‡‚å¾—é¸Ÿè¯­ åŽ†å²ä¸ŠçœŸæœ‰è¿™æ ·çš„äºº</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/20/12/29/n12651261.md#1">è½®å›žè½¬ç”Ÿ å†¤å®¶å˜æˆæ¯å­</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/1/18/n12695507.md#1">ã€å‘½ç†ã€‘è¢«å†¤æž‰é™·å®³çš„å¥½äºº çš‡å¤©èƒ½ä¸ç®¡å—ï¼Ÿ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12728948.md#1">ã€è§£å¯†æ—¶åˆ†ã€‘æ–¯é‡Œå…°å¡å‰æ€»ç»Ÿè½¬ä¸–å†œå®¶ç”·å­©</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/4/n12731608.md#1">ã€æ¨ªæ²³è§‚ç‚¹ã€‘ä¸–å«ä¸­å›½è°ƒæŸ¥ä¸å¯ä¿¡ ç¾Žå›½ä¸ºä½•é‡è¿”</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/3/n12731068.md#1">ã€æ—¶äº‹çºµæ¨ªã€‘æ‹œç™»æ–½å†·æš´åŠ›ï¼Ÿä¹ å¤§æ¸…æ´—é‡ç”Ÿæ­»æˆ˜ï¼Ÿ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/3/n12731061.md#1">ã€çè¨€çœŸè¯­ã€‘é»„æ¹›æ·±ï¼šæµ·æ´‹å…¬å›­å¤§è½¬åž‹é‡ç”Ÿéš¾</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12727425.md#1">æŽ¥å—å‘åž‹å¸ˆä¹‰å‰ª æµæµªæ±‰ç§’å˜ç»…å£«ç”·éœ‡æƒŠç½‘å‹</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/1/n12726784.md#1">ã€ç§¦é¹ç›´æ’­ã€‘ç¼…å†›æ–¹æŠ“æ˜‚å±±ç´ å­£ æ€¥åæ‹œç™»ä¹ è¿‘å¹³ï¼Ÿ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12728478.md#1">ä¸­å…±å®˜åª’ç¾¤æ‰¹â€œåŽ•æ‰€é©å‘½â€æ‰“äº†è°çš„è„¸ï¼Ÿ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/3/n12729203.md#1">é»Žå§¿æºä¸‰ä¸ªå¥³å„¿è¡Œå±± ç²‰ä¸æ„å¤–èšç„¦ä¸€åŒæ³¢éž‹</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/1/n12726330.md#1">51å²å‘¨ä¼ é›„ç™»é™†ç»¼ 22å²å­Ÿç¾Žå²å½“å¯¼å¸ˆå¼•ç‹‚æ‰¹</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12726845.md#1">é‡‘é©¬å½±åŽé©¬æ€çº¯ç–‘æ‚£æŠ‘éƒç—‡ åœå·¥åŠå¹´åŽé¦–å‘å£°</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12728875.md#1">èŽ·é™ˆå¤å¤¸èµžé˜³å…‰åˆæ¼‚äº® æ¨é¢–é»˜é»˜ç‚¹èµžè§†é¢‘è‡ªåŠ±</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12727150.md#1">ç«‹ç™¾ç—…æ¯’è‡´æ­»çŽ‡é«˜ ä¸“å®¶ç¤ºè­¦ä¸‹ä¸€åœºå¤§æµè¡Œå¨èƒ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/1/n12726617.md#1">è¿™æ—¶å–æ°´æŽ’æ¯’å¿«ï¼æ—©æ™šå–å¯¹æ°´å…»ç”Ÿ è¿˜èƒ½æŽ§è¡€ç³–</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12727769.md#1">è‹±å†›æˆ˜æœºç©ºè¢­ä¼Šæ‹‰å…‹æ´žç©´ å‡†ç¡®æ­¼ç­ISæˆå‘˜</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/1/n12724829.md#1">ä¹Œå…‹å…°ç½‘çº¢æ¯å¤©ç©¿19ä¸–çºªæœè£… å¦‚å¤å…¸ç¾Žäºº</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12727507.md#1">2021å¹´2æœˆæ˜¯ä¸ªå®Œç¾ŽçŸ©å½¢ ä¼šæœ‰å¤§äº‹å‘ç”Ÿå—ï¼Ÿ</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/yxhgbq3433/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/yxhgbq3433/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/5/6/n11237308.htm">ç¥žéŸµå¤å…´ä¸­åŽä¼ ç»Ÿæ–‡åŒ– å†›éœ€å¤„ç»ç†å¿ƒç”Ÿæ•¬ç•</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yxhgbq3433/djy/blob/master/gb/19/5/6/n11237308.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/yxhgbq3433/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/yxhgbq3433/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
